--- a/argumentos.html
+++ b/argumentos.html
@@ -13,10 +13,13 @@
 			// console.log(arg1);
 			// console.log(arg2);
 
-			console.log(arguments);
+			// console.log(arguments);
 
 			var cero = arguments[0];
 			var uno = arguments[1];
+
+			console.log(cero);
+			console.log(uno);
 
 			// console.log("esta funcion espera "+ejemplo.length+" argumentos y nosotros la llamamos con "+arguments.length+" argumentos.");
 
